Add support for the jvm-opts in the Start command to pass options to the Java Virtual Machine.
Signed-off-by: Clement Escoffier <clement.escoffier@gmail.com>